modified the format of the last version

--- a/prj/SensorNode/ping-pong/keil/Objects/ping-pong.build_log.htm
+++ b/prj/SensorNode/ping-pong/keil/Objects/ping-pong.build_log.htm
@@ -21,8 +21,8 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
 Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
-C:\documents\fw\stm8~stm32 20150723\prj\SensorNode\ping-pong\keil\ping-pong.uvprojx
-Project File Date:  08/19/2015
+C:\documents\fw\stm8~stm32 migration\prj\SensorNode\ping-pong\keil\ping-pong.uvprojx
+Project File Date:  08/28/2015
 
 <h2>Output:</h2>
 Rebuild target 'SensorNode ping-pong'
@@ -94,12 +94,12 @@ compiling uart.c...
 ..\..\..\..\src\drv\uart.c: 1 warning, 0 errors
 compiling sx1276.c...
 linking...
-Program Size: Code=14228 RO-data=556 RW-data=224 ZI-data=2712  
+Program Size: Code=14048 RO-data=556 RW-data=216 ZI-data=2712  
 FromELF: creating hex file...
 ".\Objects\ping-pong.axf" - 0 Error(s), 4 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  C:\documents\fw\stm8~stm32 20150723\prj\SensorNode\ping-pong\keil\RTE
+  C:\documents\fw\stm8~stm32 migration\prj\SensorNode\ping-pong\keil\RTE
   C:\Keil_v5\ARM\PACK\Keil\STM32L1xx_DFP\1.0.2\Device\Include
 
 <h2>Collection of Component Files used:</h2>
